# esp32-dht11-dashboard

./: .gitignore  package-lock.json  package.json  render.yaml  server.js
esp32-dht11-http/: CMakeLists.txt  Kconfig.projbuild  sdkconfig.old
esp32-dht11-http/main/: CMakeLists.txt  Kconfig  dht11.c  dht11.h  main.c
public/: index.html
public/js/: app.js
